--- a/_posts/2018-12-21-Shootout.md
+++ b/_posts/2018-12-21-Shootout.md
@@ -1,7 +1,9 @@
 ---
-title: "An Unreasonably Unfair Earphone Shootout: Campfire Audio, Shure, Beyerdynamic and Noble Audio"
+title: "An Unreasonably Unfair Earphone Shootout"
 date: 2018-12-21
 last_modified_at: 2025-01-09
+header:
+  teaser: /assets/images/shootout/header.jpg
 categories:
   - Blog
 tags:
