Style tweaks, favicon, copy fixes

--- a/_posts/2018-12-21-Shootout.md
+++ b/_posts/2018-12-21-Shootout.md
@@ -37,7 +37,7 @@ There is an equal amount of hype around this brand, although in the *other* circ
 
 ### [Shure SE-846](https://www.shure.com/americas/products/earphones/se-earphones/se846-sound-isolating-earphones-state-of-the-art)
 
-I used to own these and I loved them. They were like [Audeze LCD-X](/blog/Audeze-LCD-X-Review/) mini with more bass, meaty punch and forward midrange. I sold them because they started to fall out of my ears. I grabbed them again for this comparison to find out if they sound as good as I remember them.
+I used to own these and I loved them. They were like [Audeze LCD-X](/Audeze-LCD-X-Review/) mini with more bass, meaty punch and forward midrange. I sold them because they started to fall out of my ears. I grabbed them again for this comparison to find out if they sound as good as I remember them.
 
 ### [Beyerdynamic Xelento](https://north-america.beyerdynamic.com/catalog/product/view/_ignore_category/1/id/4053/s/xelento-remote/)
 
