Content cleanup, new styles

--- a/_posts/2018-12-21-Shootout.md
+++ b/_posts/2018-12-21-Shootout.md
@@ -13,25 +13,29 @@ tags:
 
 ![From left: Beyerdynamic Xelento, Noble Audio Kaiser Encore, Campfire Audio Solaris and Shure SE-846.](/assets/images/shootout/header.jpg)
 
-I spent quite a bit of time stuck on a chair in the air this year. Music is important to me, so I’ve been traveling with Oppo PM-3 — a wonderful planar magnetic, over-hear, closed-back headphone. Sound-wise, it does everything just right for me: it’s musical, accurate, doesn’t emphasize anything and has reasonable punch. Maybe a bit boring due to trying to be so even across the board, but I let it slide.
-
-<!--more-->
+I spent quite a bit of time stuck on a chair in the air this year. Music is important to me, so I’ve been traveling with Oppo PM-3 — a wonderful planar magnetic, over-hear, closed-back headphone. <!--more-->Sound-wise, it does everything just right for me: it’s musical, accurate, doesn’t emphasize anything and has reasonable punch. Maybe a bit boring due to trying to be so even across the board, but I let it slide.
 
 Unfortunately, the form factor has proven to be too cumbersome for travel: I found myself listening to music less and less. They’re too large and fiddly. I won’t have that though, I need to pad those [last.fm stats](https://www.last.fm/user/Pe8er), right?
 
-I decided to take another look at earphones¹. I used to own Shure SE-846 a few years ago. I loved the sound, but it was cumbersome to put them on and they kept falling out of my ears. Stock cable was too stiff, aftermarket cables were either expensive or low quality.
+I decided to take another look at earphones[^1]. I used to own Shure SE-846 a few years ago. I loved the sound, but it was cumbersome to put them on and they kept falling out of my ears. Stock cable was too stiff, aftermarket cables were either expensive or low quality.
+
+[^1]: I considered customs for a while, but eventually decided against them: low resale value and the risk of unpleasant impression of in-ear intrusion pushed me away.
 
 I was very happy to learn that apparently earphone market has seen a considerable progress in technological development in the last few years. Companies like Campfire Audio and Noble exploded, not to mention the very vibrant Asian makers popped up and challenged the status quo. Seems like the right moment to jump back in.
 
-Since consumer is king™ in America and return policies tend to be generous, I decided to put in all my savings and one kidney into several models that *might* suit my taste based on extended reading. Here’s what I got and why, in no particular order.
+Since consumer is king™ in America and return policies tend to be generous, I decided to put in all my savings and one kidney into several models that _might_ suit my taste based on extended reading. Here’s what I got and why, in no particular order.
 
-### [Campfire Audio Solaris](https://campfireaudio.com/shop/solaris/)²
+### [Campfire Audio Solaris](https://campfireaudio.com/shop/solaris/)[^2]
 
-On top of the regular hype for Campfire Audio products on the forums, I saw otherwise reasonable people lose their minds, families fall apart, governments dissolve and economies fall over this particular model. What caught my eye was that these riots were happening in the slightly *more sensible* [circles of audiophile community](https://www.superbestaudiofriends.org/index.php?threads/campfire-audio-solaris-raising-the-bar.6926/). I got swept by the hype.³
+[^2]: No bullshit affiliate links here.
+
+On top of the regular hype for Campfire Audio products on the forums, I saw otherwise reasonable people lose their minds, families fall apart, governments dissolve and economies fall over this particular model. What caught my eye was that these riots were happening in the slightly _more sensible_ [circles of audiophile community](https://www.superbestaudiofriends.org/index.php?threads/campfire-audio-solaris-raising-the-bar.6926/). I got swept by the hype.[^3]
+
+[^3]: Noted in 2025: this aged poorly.
 
 ### [Noble Audio Kaiser Encore](https://nobleaudio.com/en/shop/universal/kaiser-encore/)
 
-There is an equal amount of hype around this brand, although in the *other* circles. That made me skeptical, but reviews were intriguing enough to spark my interest anyway. I’m a big fan of Noble’s design language too, having spent countless hours drooling over [Wizard’s gorgeous designs](https://www.instagram.com/nobleaudio/).
+There is an equal amount of hype around this brand, although in the _other_ circles. That made me skeptical, but reviews were intriguing enough to spark my interest anyway. I’m a big fan of Noble’s design language too, having spent countless hours drooling over [Wizard’s gorgeous designs](https://www.instagram.com/nobleaudio/).
 
 (I received a special Black-On-Black edition of this model. Thank God.)
 
@@ -61,13 +65,13 @@ Let’s-a go!
 
 ### Quantity
 
- 1. Xelento
+1. Xelento
 
- 2. SE-846
+2. SE-846
 
- 3. Solaris
+3. Solaris
 
- 4. Kaiser Encore
+4. Kaiser Encore
 
 **Xelento** has too much bass. It overpowers the presentation and limits its usefulness to a handful of electronic genres. There is too much punch too, kick drums sound unnatural and tiring after a short while.
 
@@ -79,13 +83,13 @@ Let’s-a go!
 
 ### Quality
 
- 1. Solaris
+1. Solaris
 
- 2. Kaiser Encore
+2. Kaiser Encore
 
- 3. Xelento
+3. Xelento
 
- 4. SE-846
+4. SE-846
 
 **Solaris** does an amazing job uncovering texture in bass. **Kaiser** is not far behind. **Xelento** does it well too, although I feel that bass quality would be better if there weren’t so much of it. **SE-846** has the least amount of texture and layering, comparatively.
 
@@ -93,13 +97,13 @@ Let’s-a go!
 
 ## Midrange
 
- 1. Kaiser Encore
+1. Kaiser Encore
 
- 2. Solaris
+2. Solaris
 
- 3. SE-846
+3. SE-846
 
- 4. Xelento
+4. Xelento
 
 I quite like electric guitars on the **Kaiser**. They have an aggressive bite to them. On the flip side, there is not enough foundation, they feel a bit thin and shouty due to Kaiser’s emphasis on the upper frequencies.
 
@@ -113,17 +117,17 @@ And finally **Xelento** — midrange sounds more or less correct to me, although
 
 ## Treble
 
- 1. Solaris
+1. Solaris
 
- 2. SE-846
+2. SE-846
 
- 3. Xelento
+3. Xelento
 
- 4. Kaiser Encore
+4. Kaiser Encore
 
 This is a tricky section for me to analyze and write about. See, being a very stable genius™, I acquired tinnitus and as a result, my ears are sensitive to high frequencies. In other words, I will never enjoy earphones which emphasize treble.
 
-**Solaris** has just the right amount of treble, there is sparkle and it is perfectly smooth. I can survive the high pitched screech at [00:06 in Front 242’s *Soul Manager*](https://www.youtube.com/watch?v=tY6rLklc0is), no problem.
+**Solaris** has just the right amount of treble, there is sparkle and it is perfectly smooth. I can survive the high pitched screech at [00:06 in Front 242’s _Soul Manager_](https://www.youtube.com/watch?v=tY6rLklc0is), no problem.
 
 **SE-846**’s treble sounds natural, but it is slightly recessed in comparison to its midrange and less smooth than all the other earphones.
 
@@ -133,43 +137,43 @@ And finally the **Kaiser…** it trips over my tinnitus miserably. I can’t lis
 
 ## Resolution
 
- 1. Solaris
+1. Solaris
 
- 2. Kaiser Encore
+2. Kaiser Encore
 
- 3. Xelento
+3. Xelento
 
- 4. SE-846
+4. SE-846
 
 **Solaris** does a remarkable job of delivering detail. It’s articulate and smooth. There is just enough air between instruments so that I can follow each separately with ease. At the same time, overall presentation is coherent and musical, it doesn’t feel like it tries too hard to show me how detailed it can be.
 
 **Kaiser** follows suit, although I feel there is trickery here — it uses the elevated treble to appear more competent in this area.
 
-**Xelento** happily follows the path of using treble to *upscale* resolution and takes it further than the Kaiser. Apart from that bass glues everything together down low and midrange is lost in the background, affecting instrument separation across the board.
+**Xelento** happily follows the path of using treble to _upscale_ resolution and takes it further than the Kaiser. Apart from that bass glues everything together down low and midrange is lost in the background, affecting instrument separation across the board.
 
 **SE-846** toddles along in the back, carefree: a respectable performer on its own, but unrefined and less than average in the context of its competition.
 
 ## Soundstage
 
- 1. Solaris
+1. Solaris
 
- 2. Kaiser Encore
+2. Kaiser Encore
 
- 3. Xelento
+3. Xelento
 
- 4. SE-846
+4. SE-846
 
 **Solaris** delivers spacious and impactful sound. **Kaiser’s** soundstage is too large for me, it reminds me of Sennheiser HD-800 and music loses its punch. **Xelento** and **SE-846** are both more in-your-face due to their punchy nature. Xelento seems to be quite a bit wider than SE-846 though.
 
 ## Comfort
 
- 1. Xelento
+1. Xelento
 
- 2. SE-846
+2. SE-846
 
- 3. Solaris
+3. Solaris
 
- 4. Kaiser Encore
+4. Kaiser Encore
 
 This aspect is completely subjective, unless you’re a clone of me.
 
@@ -183,13 +187,13 @@ And finally **Kaiser** — initially I couldn’t make any of the supplied tips 
 
 ## Ergonomics
 
- 1. Solaris
+1. Solaris
 
- 2. SE-846
+2. SE-846
 
- 3. Kaiser Encore
+3. Kaiser Encore
 
- 4. Xelento
+4. Xelento
 
 First up, **Solaris**. For something that looks like a specimen from a jewelry store, they feel tough. Golden surface has a pleasant matte texture, which is not prone to scratches at all. Each earphone has a gigantic, clear side marking. The cable feels solid and premium, not too stiff.
 
@@ -203,13 +207,13 @@ First up, **Solaris**. For something that looks like a specimen from a jewelry s
 
 ## Design
 
- 1. Solaris
+1. Solaris
 
- 2. SE-846
+2. SE-846
 
- 3. Xelento
+3. Xelento
 
- 4. Kaiser Encore
+4. Kaiser Encore
 
 I’m nitpicking, they are all quite beautiful.
 
@@ -243,12 +247,13 @@ Emphasized midrange, musical, meaty. Unrefined in comparison to the others. Enjo
 
 I tallied up places in each category and assigned points like so: #1 equals 4 points, #2 = 3 pts, #3 = 2 pts and #4 =1 point. I’m not sure if this system makes sense, but end results more or less match my preferences:
 
- 1. **Solaris: 31 points**
+1. Solaris: **31** points
 
- 2. **SE-846: 20 points
-Xelento: 20 points**
+2. SE-846: **20** points
+  
+    Xelento: **20** points
 
- 3. **Kaiser Encore: 19 points**
+3. Kaiser Encore: **19** points
 
 Oh boy, the revered Kaiser Encore defeated by the silly Xelento and the ancient Shure SE-846? I can hear the pitchforks scratching at my front door. Folks, please remember this is an entirely subjective review, okay?
 
@@ -257,9 +262,3 @@ Furthermore, there is a good chance that if you’re not an idiot like me — bl
 I’m happy that I went through this test and I’m confident that Solaris is the keeper. At least for now…
 
 I think the main takeaway here is that I encourage you to take reviews with a grain of salt and always listen to audio products before you buy. Consumption of sound is an incredibly individual experience due to both physical and mental factors and it’s never a good idea to spend significant money without trying things out. So, I encourage you to take advantage of generous return policies and test stuff. For science!
-
-¹ I considered customs for a while, but eventually decided against them: low resale value and the risk of unpleasant impression of in-ear intrusion pushed me away.
-
-² No bullshit affiliate links here!
-
-³ Noted in 2025: this aged poorly!
