Added photo to g3 post

--- a/_posts/2025-03-28-G3.md
+++ b/_posts/2025-03-28-G3.md
@@ -6,7 +6,13 @@ categories:
 tags:
   - Homelab
 toc: true
+header:
+  teaser: /assets/images/g3.jpg
 ---
+
+[![g3!](/assets/images/g3.jpg)](/assets/images/g3.jpg)
+
+<figcaption>Image credit: GMKtec</figcaption>
 
 I got a new server: the tiny, affordable GMKtec NucBox G3. It replaces the Raspberry Pi 3B I've had for what feels like an eternity. I installed Ubuntu 25.04 on it, and so here's a recording of how I set it up.
 
@@ -115,7 +121,7 @@ services:
 
 ### MusicBrainz Picard
 
-I tried hard to like Lidarr but realized I didn't need all the complexity and maintenance it required. I'm not a hoarder, I'm rather intentional as far as music is concerned, so I don't need to any automation as far as music downloads. And finally Picard gives me full control over the tagging process, which I've always been pretty anal about.
+I tried hard to like Lidarr but realized I didn't need all the complexity and maintenance it required. I'm not a hoarder, I'm rather intentional as far as music is concerned, so I don't need to any automation for music downloads. And what is quite important to me: Picard gives me full control over the tagging process, whereas in Lidarr it was automated and rather opaque to me.
 
 ```yaml
 version: "3.3"
@@ -132,11 +138,13 @@ services:
 
 And my file rename script (or [grab the gist](https://gist.github.com/Pe8er/270b524e5d48dfd3fa23b97d5e6a0062#file-0000-album_00-title-m4a-ptsp)):
 
-`%albumartist%/\($if(%originalyear%,%originalyear%,$if(%date%,$left(%date%,4),0000))\) %album%/$if($gt(%totaldiscs%,1),%discnumber%-)$num(%tracknumber%,2) $if2(%albumartist%,%artist%) - %title%`
+```
+%albumartist%/\($if(%originalyear%,%originalyear%,$if(%date%,$left(%date%,4),0000))\) %album%/$if($gt(%totaldiscs%,1),%discnumber%-)$num(%tracknumber%,2) $if2(%albumartist%,%artist%) - %title%
+```
 
 ### Radarr
 
-Radarr manages movie grabbing and management. I prefer this way to grab new movies instead of manual search.
+Radarr manages movie grabbing and management. I prefer this way to grab new movies instead of manual search because it's much faster and less cognitively intensive for me.
 
 ```yaml
 ---
@@ -158,7 +166,7 @@ services:
 
 ### Prowlarr
 
-I need this to easily add indexers to *arr apps.
+I need this to easily add indexers to *arr apps. It replaces Jackett.
 
 ```yaml
 ---
