--- a/_posts/2025-07-11-Borg.md
+++ b/_posts/2025-07-11-Borg.md
@@ -9,7 +9,9 @@ header:
   teaser:
 ---
 
-This procedure was scary and felt like stumbling around a maze in a blindfold. Borg is way too powerful and customizable for my needs. I think it works. We'll see.
+This procedure was scary and felt like stumbling around a maze in a blindfold. Borg is way too powerful and customizable for my needs, although I think it works. We'll see.
+
+*Update several months later: it works!!*
 
 <!--more-->
 
